# smart_webcam

./: .gitignore  CMakeLists.txt  README.md  make.md  readme.cpp  server.cpp  server.hpp  test.cpp  webcam
include/: server.hpp  telegram_bot.hpp  videoServer.hpp  video_client.hpp  video_server.hpp
proto/: result_service.proto  video_processor.proto
src/: main_telegram_bot.cpp  main_video_client.cpp  main_video_server.cpp  server.py  telegram_bot.cpp  videoServer.cpp  video_client.cpp  video_server.cpp
